Finalize Contact Us

--- a/source/RockawayWish.Web/Config/app.config
+++ b/source/RockawayWish.Web/Config/app.config
@@ -10,7 +10,7 @@
   <add key="Site-Enable-Cache" value="true"/>
   <add key="Site-Title" value="Wish of Rockaway"/>
   <add key="Site-Application-Id" value="547E6064-4BA3-47A0-A408-53A10C68D860"/>
-  <add key="Site-Url" value="https://rockawaywish.org-local"/>
+  <add key="Site-Url" value="https://rockawaywish-local.tiradointeractive.com"/>
 
   <!-- Site API Settings -->
   <add key="Site-Api-Url" value="https://games-api.tiradointeractive.com"/>
@@ -40,7 +40,7 @@
   <add key="Membership-Admin-Application-Id" value="02772dae-371e-40e8-b8fc-afed0cde9c24"/>
 
   <!-- Global Asset Settings -->
-  <add key="Site-Logo-Url" value="~/Content/img/bone-spinner-small.gif"/>
+  <add key="Site-Logo-Url" value="https://rockawaywish.tiradointeractive.com/content/images/logo2.png"/>
   <add key="Site-Loading-Image-Url" value="~/Content/img/bone-spinner-small.gif"/>
 
   <!-- Notification Settings -->
@@ -54,7 +54,7 @@
   <add key="Site-Notification-Message-User" value=""/>
 
   <!-- Error Settings -->
-  <add key="Site-Error-Url" value="https://rockawaywish.org-local/error"/>
+  <add key="Site-Error-Url" value="https://rockawaywish-local.tiradointeractive.com/error"/>
   <add key="Site-Error-Notification-Enable-Admin" value="true"/>
   <add key="Site-Error-Notification-Subject-Admin" value="Test Error Notification subject for {0} to admin"/>
   <add key="Site-Error-Notification-Message-Admin" value="Test Error Notification message for {0} to admin."/>
@@ -63,7 +63,7 @@
   <add key="Site-Error-Notification-Message-User" value="Test Error notification message for {0} to user."/>
 
   <!-- Login Settings -->
-  <add key="Site-Login-Url" value="https://rockawaywish.org-local/users/sign/in"/>
+  <add key="Site-Login-Url" value="https://rockawaywish-local.tiradointeractive.com/users/sign/in"/>
   <add key="Site-Login-Notification-Enable-Admin" value="true"/>
   <add key="Site-Login-Notification-Subject-Admin" value=""/>
   <add key="Site-Login-Notification-Message-Admin" value=""/>
@@ -72,7 +72,7 @@
   <add key="Site-Login-Notification-Message-User" value=""/>
 
   <!-- Registration Settings -->
-  <add key="Site-Registration-Url" value="https://rockawaywish.org-local/users/register"/>
+  <add key="Site-Registration-Url" value="https://rockawaywish-local.tiradointeractive.com/users/register"/>
   <add key="Site-Registration-Notification-Enable-Admin" value="true"/>
   <add key="Site-Registration-Notification-Subject-Admin" value=""/>
   <add key="Site-Registration-Notification-Message-Admin" value=""/>
@@ -81,7 +81,7 @@
   <add key="Site-Registration-Notification-Message-User" value=""/>
 
   <!-- Activation Settings -->
-  <add key="Site-Activation-Url" value="https://rockawaywish.org-local/users/activate/?aId={0}&amp;sD={1}&amp;tP={2}"/>
+  <add key="Site-Activation-Url" value="https://rockawaywish-local.tiradointeractive.com/users/activate/?aId={0}&amp;sD={1}&amp;tP={2}"/>
   <add key="Site-Activation-Notification-Enable-Admin" value="true"/>
   <add key="Site-Activation-Notification-Subject-Admin" value=""/>
   <add key="Site-Activation-Notification-Message-Admin" value=""/>
@@ -90,7 +90,7 @@
   <add key="Site-Activation-Notification-Message-User" value=""/>
 
   <!-- Forgot Password Settings -->
-  <add key="Site-Forgot-Password-Url" value="https://rockawaywish.org-local/users/forgot/password"/>
+  <add key="Site-Forgot-Password-Url" value="https://rockawaywish-local.tiradointeractive.com/users/forgot/password"/>
   <add key="Site-Forgot-Password-Notification-Enable-Admin" value="true"/>
   <add key="Site-Forgot-Password-Notification-Subject-Admin" value=""/>
   <add key="Site-Forgot-Password-Notification-Message-Admin" value=""/>
@@ -99,7 +99,7 @@
   <add key="Site-Forgot-Password-Notification-Message-User" value=""/>
 
   <!-- Reset Password Settings -->
-  <add key="Site-Reset-Password-Url" value="https://rockawaywish.org-local/users/reset/password/?v={0}&amp;tk={1}"/>
+  <add key="Site-Reset-Password-Url" value="https://rockawaywish-local.tiradointeractive.com/users/reset/password/?v={0}&amp;tk={1}"/>
   <add key="Site-Reset-Password-Notification-Enable-Admin" value="true"/>
   <add key="Site-Reset-Password-Notification-Subject-Admin" value=""/>
   <add key="Site-Reset-Password-Notification-Message-Admin" value=""/>
@@ -108,17 +108,17 @@
   <add key="Site-Reset-Password-Notification-Message-User" value=""/>
 
   <!-- Contact Us Settings -->
-  <add key="Site-Contact-Us-Url" value="https://rockawaywish.org-local/contact/us"/>
+  <add key="Site-Contact-Us-Url" value="https://rockawaywish-local.tiradointeractive.com/contact/us"/>
   <add key="Site-Contact-Us-Email" value="richie@tiradointeractive.com"/>
   <add key="Site-Contact-Us-Notification-Enable-Admin" value="true"/>
-  <add key="Site-Contact-Us-Notification-Subject-Admin" value="Test Contact Us Notification subject for {0} to admin"/>
+  <add key="Site-Contact-Us-Notification-Subject-Admin" value="The following user has submitted a question on {0} website"/>
   <add key="Site-Contact-Us-Notification-Message-Admin" value="Test Contact Us Notification message for {0} to admin."/>
   <add key="Site-Contact-Us-Notification-Enable-User" value="true"/>
-  <add key="Site-Contact-Us-Notification-Subject-User" value="Test Contact Us subject for {0} to user"/>
-  <add key="Site-Contact-Us-Notification-Message-User" value="Test Contact Us notification message for {0} to user."/>
+  <add key="Site-Contact-Us-Notification-Subject-User" value="A message has been sent from the Wish of Rockaway website."/>
+  <add key="Site-Contact-Us-Notification-Message-User" value="A message has been sent from the Wish of Rockaway website."/>
 
   <!-- Sign Out Settings -->
-  <add key="Site-Sign-Out-Url" value="https://rockawaywish.org-local/users/sign/out"/>
+  <add key="Site-Sign-Out-Url" value="https://rockawaywish-local.tiradointeractive.com/users/sign/out"/>
   <add key="Site-Sign-Out-Email" value="richie@tiradointeractive.com"/>
   <add key="Site-Sign-Out-Notification-Enable-Admin" value="true"/>
   <add key="Site-Sign-Out-Notification-Subject-Admin" value="Test Sign Out Notification subject for {0} to admin"/>
@@ -154,14 +154,14 @@
   <add key="Site-Smtp-Use-Default-Credentials" value="false"/>
 
   <!-- Social Settings -->
-  <add key="Site-Instagram-Url" value="https://rockawaywish.org-local/users/sign/out"/>
+  <add key="Site-Instagram-Url" value="https://rockawaywish-local.tiradointeractive.com/users/sign/out"/>
   <add key="Site-Instagram-Access-Token" value="Rtbjy-5My4zNXhbzfv_O-0hoc4Qi0U7xZlWrgPeWTjU"/>
 
   <!-- PayPal Settings -->
   <add key="Site-PayPal-Donate-Button-Id" value="TPYZYJWF4DDJW"/>
 
   <!-- Donation Settings -->
-  <add key="Site-Donation-Url" value="https://rockawaywish.org-local/donate"/>
+  <add key="Site-Donation-Url" value="https://rockawaywish-local.tiradointeractive.com/donate"/>
   <add key="Site-Donation-Payment-Id" value="02772dae-371e-40e8-b8fc-afed0cde9c24"/>
   <add key="Site-Donation-Notification-Enable-Admin" value="true"/>
   <add key="Site-Donation-Notification-Subject-Admin" value="Test Donation Notification subject for {0} to admin"/>
@@ -171,7 +171,7 @@
   <add key="Site-Donation-Notification-Message-User" value="Test Donation notification message for {0} to user."/>
 
   <!-- Dues Settings -->
-  <add key="Site-Dues-Url" value="https://rockawaywish.org-local/users/sues"/>
+  <add key="Site-Dues-Url" value="https://rockawaywish-local.tiradointeractive.com/users/sues"/>
   <add key="Site-Dues-Notification-Enable-Admin" value="true"/>
   <add key="Site-Dues-Notification-Subject-Admin" value="Test Dues Notification subject for {0} to admin"/>
   <add key="Site-Dues-Notification-Message-Admin" value="Test Dues Notification message for {0} to admin"/>
@@ -180,7 +180,7 @@
   <add key="Site-Dues-Notification-Message-User" value="Test Dues notification message for {0} to user."/>
 
   <!-- Event Settings -->
-  <add key="Site-Events-Url" value="https://rockawaywish.org-local/events"/>
+  <add key="Site-Events-Url" value="https://rockawaywish-local.tiradointeractive.com/events"/>
   <add key="Site-Events-Notification-Enable-Admin" value="true"/>
   <add key="Site-Events-Notification-Subject-Admin" value="Test Events Notification subject for {0} to admin"/>
   <add key="Site-Events-Notification-Message-Admin" value="Test Events Notification message for {0} to admin"/>
