Finalize register complete

--- a/source/RockawayWish.Web/Config/app.config
+++ b/source/RockawayWish.Web/Config/app.config
@@ -46,10 +46,10 @@
   <!-- Notification Settings -->
   <add key="Site-Notification-Name-Admin" value="Wish of Rockaway Administration"/>
   <add key="Site-Notification-Email-Admin" value="richie@tiradointeractive.com"/>
-  <add key="Site-Notification-Enable-Admin" value="true"/>
+  <add key="Site-Notification-Enable-Admin" value="false"/>
   <add key="Site-Notification-Subject-Admin" value="Test Notification subject for {0} to admin"/>
   <add key="Site-Notification-Message-Admin" value="Test Notification message for {0} to admin."/>
-  <add key="Site-Notification-Enable-User" value="true"/>
+  <add key="Site-Notification-Enable-User" value="false"/>
   <add key="Site-Notification-Subject-User" value=""/>
   <add key="Site-Notification-Message-User" value=""/>
 
@@ -194,7 +194,7 @@
   <add key="Test-Membership-Api-Key" value="878B9D91-E499-4562-8BC4-5D8AC8AE5A98"/>
 
   <!-- Unit Test Application Settings-->
-  <add key="Test-Application-Id" value="246719D6-4062-463F-884C-E9CC299C1E56"/>
+  <add key="Test-Application-Id" value="547E6064-4BA3-47A0-A408-53A10C68D860"/>
   <add key="Test-Application-Title" value="Wish of Rockaway"/>
   <add key="Test-Application-Title-Updated" value="Wish of Rockaway Update"/>
   <add key="Test-Application-Is-Active" value="true"/>
