Finalize Activate in Web

--- a/source/RockawayWish.Web/Config/app.config
+++ b/source/RockawayWish.Web/Config/app.config
@@ -46,10 +46,10 @@
   <!-- Notification Settings -->
   <add key="Site-Notification-Name-Admin" value="Wish of Rockaway Administration"/>
   <add key="Site-Notification-Email-Admin" value="richie@tiradointeractive.com"/>
-  <add key="Site-Notification-Enable-Admin" value="false"/>
-  <add key="Site-Notification-Subject-Admin" value="Test Notification subject for {0} to admin"/>
-  <add key="Site-Notification-Message-Admin" value="Test Notification message for {0} to admin."/>
-  <add key="Site-Notification-Enable-User" value="false"/>
+  <add key="Site-Notification-Enable-Admin" value="true"/>
+  <add key="Site-Notification-Subject-Admin" value=""/>
+  <add key="Site-Notification-Message-Admin" value=""/>
+  <add key="Site-Notification-Enable-User" value="true"/>
   <add key="Site-Notification-Subject-User" value=""/>
   <add key="Site-Notification-Message-User" value=""/>
 
@@ -81,7 +81,7 @@
   <add key="Site-Registration-Notification-Message-User" value=""/>
 
   <!-- Activation Settings -->
-  <add key="Site-Activation-Url" value="https://rockawaywish-local.tiradointeractive.com/users/activate/?aId={0}&amp;sD={1}&amp;tP={2}"/>
+  <add key="Site-Activation-Url" value="https://rockawaywish-local.tiradointeractive.com/users/activate/?pD={0}&amp;sD={1}&amp;tP={2}"/>
   <add key="Site-Activation-Notification-Enable-Admin" value="true"/>
   <add key="Site-Activation-Notification-Subject-Admin" value=""/>
   <add key="Site-Activation-Notification-Message-Admin" value=""/>
